# hellfire-backend

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/auth/: check_auth.rs  login.rs  mod.rs  signup.rs
src/guards/: auth_guard.rs
src/models/: mod.rs
src/models/blocks/: heading.rs  mod.rs  text.rs
src/models/entities/: block.rs  mod.rs  post.rs  test_str.rs  user.rs
src/models/schemas/: error_schema.rs  mod.rs  response_schema.rs
src/posts/: add_post.rs  get_post.rs  mod.rs  modify_post.rs
src/utils/: cors.rs  mod.rs
