[package]
name = "hellfire"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde_json = "1.0.66"
mongodb = "2.0.0-beta.3"
argon2 = "0.2"
rand_core = { version = "0.6", features = ["std"] }
branca = "^0.10.0"